Your Broker text alignment correction

--- a/app/assets/stylesheets/ui-components/mahc-theme.scss
+++ b/app/assets/stylesheets/ui-components/mahc-theme.scss
@@ -527,9 +527,15 @@ thead {
       }
     }
   }
+  
+  .broker-information {
+    word-wrap: break-word;
+  }
 
   .eeTableHeader {
     font-size: 12px;
     padding: 8px;
   }
+  
+  
  
